Removes redundant validations on subclasses

--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -717,7 +717,7 @@ eng:
     amount_to_add: "Total to add"
     amount_to_reduce: "Total to reduce"
     # amount_with_taxes: "Montant TTC"
-    # analytics: "Activités"
+    # analytics: "Analytiques"
     # animal: "Animal"
     animal_bar: "Animals by category"
     animal_group_tabbox:
@@ -737,6 +737,7 @@ eng:
     are_you_sure_you_want_to_send_mails: "Are you sure you want to send emails?"
     area_x: "%{name} (%{postcode})"
     # assessable_operations: "Opérations imposables (H.T)"
+    # assets: "Immo. - Emprunts"
     # assimilated_tax: "Taxes assimilées calculées sur annexe n°3310A"
     attach_an_incoming_payment_to_expense: "Attach an incoming payment to %{type} %{number}"
     attach_an_outgoing_payment_to_expense: "Attach an outgoing payment to %{type} %{number}"
@@ -1214,6 +1215,7 @@ eng:
     page_title_special: "%{company_code} - %{action}"
     paid_amount: "Paid amount"
     paid_on: "Paid on"
+    # paids: "Réglements"
     parameters: "Parameters"
     parts_amount: "Paid amount"
     # passive_balance_sheet: "Bilan passif"
