--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -768,7 +768,7 @@ spa:
     amount_to_add: "Sumas a añadir, exprimadas en euros, y tambien con cantidad a cuenta vacaciones"
     amount_to_reduce: "Sumas a imputar, exprimadas en euros, y tambien con cantidad a cuenta vacaciones"
     amount_with_taxes: "Total de la entrega TTC"
-    # analytics: "Activités"
+    # analytics: "Analytiques"
     # animal: "Animal"
     # animal_bar: "Animaux par lot"
     animal_group_tabbox:
@@ -788,6 +788,7 @@ spa:
     are_you_sure_you_want_to_send_mails: "Esta seguro querer enviar este correo electronico?'"
     # area_x: "%{name} (%{postcode})"
     assessable_operations: "Operaciones imponibles (H.T)"
+    # assets: "Immo. - Emprunts"
     assimilated_tax: "Tarifas asimiladas calculadas sobre anexo n°3310A"
     # attach_an_incoming_payment_to_expense: "Rattacher un encaissement\_: %{type} N°%{number}"
     # attach_an_outgoing_payment_to_expense: "Rattacher un décaissement\_: %{type} N°%{number}"
@@ -1278,6 +1279,7 @@ spa:
     page_title_special: "%{company_code} - %{action}"
     # paid_amount: "Montant réglé"
     # paid_on: "Réglé le"
+    # paids: "Réglements"
     parameters: "Parametros"
     # parts_amount: "Montant réglé"
     passive_balance_sheet: "Balance pasivo"
