--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -681,7 +681,7 @@ jpn:
     # amount_to_add: "Sommes à ajouter, exprimées en euros, y compris acompte congés"
     # amount_to_reduce: "Sommes à imputer, exprimées en euros, y compris acompte congés"
     # amount_with_taxes: "Montant TTC"
-    # analytics: "Activités"
+    # analytics: "Analytiques"
     # animal: "Animal"
     # animal_bar: "Animaux par lot"
     animal_group_tabbox:
@@ -701,6 +701,7 @@ jpn:
     # are_you_sure_you_want_to_send_mails: "Êtes-vous sûr(e) de vouloir envoyer les mails ?"
     # area_x: "%{name} (%{postcode})"
     # assessable_operations: "Opérations imposables (H.T)"
+    # assets: "Immo. - Emprunts"
     # assimilated_tax: "Taxes assimilées calculées sur annexe n°3310A"
     # attach_an_incoming_payment_to_expense: "Rattacher un encaissement\_: %{type} N°%{number}"
     # attach_an_outgoing_payment_to_expense: "Rattacher un décaissement\_: %{type} N°%{number}"
@@ -1178,6 +1179,7 @@ jpn:
     page_title_special: "%{company_code} - %{action}"
     # paid_amount: "Montant réglé"
     # paid_on: "Réglé le"
+    # paids: "Réglements"
     # parameters: "Paramètres"
     # parts_amount: "Montant réglé"
     # passive_balance_sheet: "Bilan passif"
