fixes some trad

--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -335,12 +335,12 @@ fra:
       show: "Préférence"
     backend/procedure_natures:
       # edit: "Edit backend/procedure nature"
-      # index: "Index backend/procedure nature"
+      index: "Types de procédures"
       # new: "New backend/procedure nature"
       # show: "Show backend/procedure nature"
     backend/procedures:
       # edit: "Edit backend/procedure"
-      # index: "Index backend/procedure"
+      index: "Procédures"
       # new: "New backend/procedure"
       # show: "Show backend/procedure"
     backend/product_abilities:
@@ -397,7 +397,7 @@ fra:
       show: "Type de produit\_: %{name}"
     backend/product_price_listings:
       # edit: "Edit backend/product price listing"
-      # index: "Index backend/product price listing"
+      index: "Listes de prix"
       # new: "New backend/product price listing"
       # show: "Show backend/product price listing"
     backend/product_price_templates:
@@ -405,11 +405,11 @@ fra:
       # export: "Export backend/product price template"
       # find: "Find backend/product price template"
       # import: "Import backend/product price template"
-      # index: "Index backend/product price template"
+      index: "Types de prix"
       # new: "New backend/product price template"
     backend/product_prices:
       # edit: "Edit backend/product price"
-      # index: "Index backend/product price"
+      index: "Prix des produits"
       # new: "New backend/product price"
       # show: "Show backend/product price"
     backend/product_process_phases:
@@ -657,9 +657,9 @@ fra:
     backend/product_moves: "Mouvements de stock"
     backend/product_nature_categories: "Catégories de type de produits"
     backend/product_natures: "Types de produits"
-    # backend/product_price_listings: "Backend/product price listings"
-    # backend/product_price_templates: "Backend/product price templates"
-    # backend/product_prices: "Backend/product prices"
+    backend/product_price_listings: "Listes de prix"
+    backend/product_price_templates: "Types de prix"
+    backend/product_prices: "Prix des produits"
     # backend/product_process_phases: "Backend/product process phases"
     # backend/product_processes: "Backend/product processes"
     backend/product_transfers: "Transferts et pertes de stocks"
@@ -743,6 +743,7 @@ fra:
     active_current_sum: "Total actifs circulants"
     active_fixed_sum: "Total actifs immobilisés"
     active_sum: "Total actifs"
+    activity: "Activités"
     add: "Ajouter"
     add_choice: "Ajouter un choix"
     add_condition: "Ajouter la condition"
@@ -1316,11 +1317,14 @@ fra:
     print: "Imprimer"
     print_on: "Le"
     print_with_template: "Imprimer %{name}"
+    procedure_natures: "Types de procédures"
     product: "Produit"
     product_bar: "Produit par catégories"
     product_category: "Produits"
     product_category_update: "Modifier la catégorie"
     product_name: "Produit"
+    product_price_listings: "Listes de prix"
+    product_price_templates: "Types de prix"
     product_update: "Modifier la fiche du produit"
     production: "Gestion de la production"
     productions: "Productions"
