--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -308,8 +308,10 @@ jpn:
       # new: "Nouvelle préférence"
       # show: "Préférence"
     backend/prices: #?
-    backend/procedure_natures: #?
-    backend/procedures: #?
+    backend/procedure_natures:
+      # index: "Types de procédures"
+    backend/procedures:
+      # index: "Procédures"
     backend/product_abilities:
       # edit: "Modifier la compétence\_: %{name}"
       # index: "Compétences / Capacités"
@@ -357,9 +359,12 @@ jpn:
       # index: "Type de produit"
       # new: "Nouveau type de produit"
       # show: "Type de produit\_: %{name}"
-    backend/product_price_listings: #?
-    backend/product_price_templates: #?
-    backend/product_prices: #?
+    backend/product_price_listings:
+      # index: "Listes de prix"
+    backend/product_price_templates:
+      # index: "Types de prix"
+    backend/product_prices:
+      # index: "Prix des produits"
     backend/product_process_phases: #?
     backend/product_processes: #?
     backend/product_transfers:
@@ -572,6 +577,9 @@ jpn:
     # backend/product_moves: "Mouvements de stock"
     # backend/product_nature_categories: "Catégories de type de produits"
     # backend/product_natures: "Types de produits"
+    # backend/product_price_listings: "Listes de prix"
+    # backend/product_price_templates: "Types de prix"
+    # backend/product_prices: "Prix des produits"
     # backend/product_transfers: "Transferts et pertes de stocks"
     # backend/product_varieties: "Races"
     # backend/production_chain_conveyors: "Convoyeurs de chaînes de production"
@@ -648,6 +656,7 @@ jpn:
     # active_current_sum: "Total actifs circulants"
     # active_fixed_sum: "Total actifs immobilisés"
     # active_sum: "Total actifs"
+    # activity: "Activités"
     add: "加える"
     # add_choice: "Ajouter un choix"
     # add_condition: "Ajouter la condition"
@@ -1226,11 +1235,14 @@ jpn:
     # print: "Imprimer"
     # print_on: "Le"
     # print_with_template: "Imprimer %{name}"
+    # procedure_natures: "Types de procédures"
     # product: "Produit"
     # product_bar: "Produit par catégories"
     # product_category: "Produits"
     # product_category_update: "Modifier la catégorie"
     # product_name: "Produit"
+    # product_price_listings: "Listes de prix"
+    # product_price_templates: "Types de prix"
     product_tabbox: #?
     # product_update: "Modifier la fiche du produit"
     # production: "Gestion de la production"
