--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -92,8 +92,7 @@ jpn:
     backend/dashboards:
       # accountancy: "Tableau de bord comptable"
       # finances: "Tableau de bord financier"
-      # general: "Tableau de bord général"
-      # index: "Menu principal"
+      # index: "Tableau de bord général"
       # production: "Tableau de bord de la production"
       # purchases: "Tableau de bord des achats"
       # relationship: "Tableau de bord de la gestion des relations"
@@ -864,7 +863,7 @@ jpn:
     # duration_in_hours_and_minutes: "%{hours}h %{minutes}min"
     # edit: "Modifier"
     ekylibre: "www.ekylibre.org"
-    # elevage_rss: "Actu Elevage"
+    # elevage_rss: "Actualité élevage"
     # email: "Email:"
     # employee_name: "Employé"
     # end: "au"
@@ -1035,6 +1034,7 @@ jpn:
       # finances: "Finances"
       # general: "Général"
       # home: "Accueil"
+      # index: "Ekylibre"
       # production: "Production"
       # purchases: "Achats"
       # relationship: "Tiers"
@@ -1409,6 +1409,7 @@ jpn:
     # to_date: "Au"
     # to_deliver: "Livrer"
     # to_deposit: "À encaisser"
+    # today: "Aujourd'hui"
     # tool_update: "Modifier le matériel"
     # tools: "Matériel utilisé"
     # tools_list: "Matériel"
