Cleans tabbox of beehives and a new theme tekyla-sunrise

--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -4,6 +4,7 @@ arb:
       destroy: "الخروج"
       new: "الدخول"
       # renew: "Renouveller la session"
+    backend: #?
     backend/account_balances: #?
     backend/accountancy:  #?
       balance: "رصيد الحساب" #?
