--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -1070,6 +1070,7 @@ fra:
     last_animals: "Dernières naissances"
     last_computed_balance: "Dernière balance calculée"
     last_events: "Derniers Evènements"
+    last_milk_result: "Dernières analyses de lait"
     last_payment_amount: "Montant du dernier encaissement"
     last_payment_date: "Date du dernier encaissement"
     last_products: "Dernières naissances"
